editors/tree-sitter-lisette/grammar.js
    source_file: $ => repeat($._statement),

    _statement: $ => choice(
      $.expression_statement,
      $._declaration_statement,
    ),

    _semicolon: $ => choice(';', $._automatic_semicolon),

    expression_statement: $ => choice(
      seq($._expression, $._semicolon),
      prec(1, $._expression_ending_with_block),
    ),

    function_item: $ => seq(
      optional($.visibility_modifier),
      'fn',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameters)),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._type))),
      field('body', $.block),
    ),

    parameters: $ => parenList(seq(
      optional($.attribute_item),
      choice(
        $.parameter,
        $.self_parameter,
        '_',
        $._type,
      ),
    )),

    parameter: $ => seq(
      optional($.mutable_specifier),
      field('pattern', choice(
        $._pattern,
        'self',
      )),
      ':',
      field('type', $._type),
    ),

    _type: $ => choice(
      $.generic_type,
      $.scoped_type_identifier,
      $.tuple_type,
      $.unit_type,
      $.function_type,
      $._type_identifier,
      $.never_type,
    ),

    _expression_except_range: $ => choice(
      $.unary_expression,
      $.reference_expression,
      $.try_expression,
      $.binary_expression,
      $.assignment_expression,
      $.compound_assignment_expression,
      $.type_cast_expression,
      $.call_expression,
      $.generic_call_expression,
      $.return_expression,
      $._literal,
      prec.left($.identifier),
      $.self,
      $.field_expression,
      $.slice_expression,
      $.tuple_expression,
      $.unit_expression,
      $.break_expression,
      $.continue_expression,
      $.index_expression,
      $.closure_expression,
      $.parenthesized_expression,
      $.struct_expression,
      $.deref_expression,
      $.rawgo_directive,
      $._expression_ending_with_block,
    ),

    _expression: $ => choice(
      $._expression_except_range,
      $.range_expression,
    ),

    _expression_ending_with_block: $ => choice(
      $.block,
      $.if_expression,
      $.if_let_expression,
      $.match_expression,
      $.while_expression,
      $.while_let_expression,
      $.loop_expression,
      $.for_expression,
      $.select_expression,
      $.try_block,
      $.recover_block,
    ),

    // Binary / unary / postfix expressions

    range_expression: $ => prec.left(PREC.range, choice(
      seq($._expression, choice('..', '..='), $._expression),
      seq($._expression, '..'),
      seq('..', $._expression),
      seq('..=', $._expression),
      '..',
    )),

    unary_expression: $ => prec(PREC.unary, seq(
      choice('-', alias($._bang, '!')),
      $._expression,
    )),

    reference_expression: $ => prec(PREC.unary, seq(
      '&',
      field('value', $._expression),
    )),

    try_expression: $ => prec(PREC.try, seq(
      $._expression,
      '?',
    )),

    deref_expression: $ => prec(PREC.field, seq(
      field('value', $._expression),
      '.',
      '*',
    )),

    binary_expression: $ => {
      const table = [
        [PREC.pipeline, '|>'],
        [PREC.or, '||'],
        [PREC.and, '&&'],
        [PREC.comparative, choice('==', '!=', '<=', '>=')],
        [PREC.additive, choice('+', '-', '|', '^')],
        [PREC.multiplicative, choice('*', '/', '%', '<<', '>>', '&', '&^')],
      ];

      return choice(
        // @ts-ignore
        ...table.map(([precedence, operator]) => prec.left(precedence, seq(
          field('left', $._expression),
          // @ts-ignore
          field('operator', operator),
          field('right', $._expression),
        ))),
        prec.left(PREC.comparative, seq(
          field('left', $._expression),
          field('operator', '<'),
          field('right', $._expression),
        )),
        prec.left(PREC.comparative, seq(
          field('left', $._expression),
          field('operator', '>'),
          field('right', $._expression),
        )),
      );
    },

    assignment_expression: $ => prec.left(PREC.assign, seq(
      field('left', $._expression),
      '=',
      field('right', $._expression),
    )),

    compound_assignment_expression: $ => prec.left(PREC.assign, seq(
      field('left', $._expression),
      field('operator', choice('+=', '-=', '*=', '/=', '%=')),
      field('right', $._expression),
    )),

    type_cast_expression: $ => prec.left(PREC.cast, seq(
      field('value', $._expression),
      'as',
      field('type', $._type),
    )),

    return_expression: $ => choice(
      prec.left(seq('return', $._expression)),
      prec(-1, 'return'),
    ),

    call_expression: $ => prec(PREC.call, seq(
      field('function', $._expression_except_range),
      field('arguments', $.arguments),
    )),

    generic_call_expression: $ => prec(PREC.call, seq(
      field('function', choice(
        $.identifier,
        $.field_expression,
      )),
      field('type_arguments', $.call_type_arguments),
      field('arguments', $.arguments),
    )),

    call_type_arguments: $ => seq(
      $._open_angle,
      sepBy1(',', choice($._type, $._literal)),
      optional(','),
      '>',
    ),

    arguments: $ => parenList(choice($._expression, $.spread_argument)),

    spread_argument: $ => prec(PREC.try, seq($._expression, '...')),

    slice_expression: $ => seq('[', commaSep($._expression), ']'),

    parenthesized_expression: $ => seq(
      '(',
      $._expression,
      ')',
    ),

    tuple_expression: $ => seq(
      '(',
      seq($._expression, ','),
      repeat(seq($._expression, ',')),
      optional($._expression),
      ')',
    ),

    unit_expression: _ => seq('(', ')'),

    struct_expression: $ => seq(
      field('name', choice(
        $._type_identifier,
        $.scoped_type_identifier,
      )),
      field('body', $.field_initializer_list),
    ),

    field_initializer_list: $ => bracedList(choice(
      $.shorthand_field_initializer,
      $.field_initializer,
      $.base_field_initializer,
      $.zero_fill_initializer,
    )),

    field_initializer: $ => seq(
      field('field', choice($._field_identifier, $.integer_literal)),
      ':',
      field('value', $._expression),
    ),

    base_field_initializer: $ => seq(
      '..',
      $._expression,
    ),

    zero_fill_initializer: _ => prec(1, '..'),

    // Control flow

    loop_expression: $ => seq(
      'loop',
      field('body', $.block),
    ),

    break_expression: $ => prec.left(seq('break', optional($._expression))),

    closure_expression: $ => prec(PREC.closure, seq(
      field('parameters', $.closure_parameters),
      choice(
        seq(
          optional(seq('->', field('return_type', $._type))),
          field('body', $.block),
        ),
        field('body', $._expression),
      ),
    )),

    closure_parameters: $ => seq(
      '|',
      sepBy(',', choice(
        $._pattern,
        $.parameter,
      )),
      '|',
    ),

    // Field / index access

    index_expression: $ => prec(PREC.call, seq(
      $._expression,
      '[',
      $._expression,
      ']',
    )),

    field_expression: $ => prec(PREC.field, seq(
      field('value', $._expression),
      '.',
      field('field', choice(
        $._field_identifier,
        $.integer_literal,
      )),
    )),

    // Blocks

    block: $ => seq(
      '{',
      repeat($._statement),
      optional($._expression),
      '}',
    ),

    // Let / var

    let_declaration: $ => seq(
      'let',
      optional($.mutable_specifier),
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
      optional(seq(
        'else',
        field('alternative', $.block),
      )),
      $._semicolon,
    ),

    // Directives

    rawgo_directive: $ => seq(
      '@rawgo',
      '(',
      $.string_literal,
      ')',
    ),

    // Patterns

    _pattern: $ => choice(
      $._literal_pattern,
      $.identifier,
      $.tuple_pattern,
      $.tuple_struct_pattern,
      $.struct_pattern,
      $.slice_pattern,
      $.or_pattern,
      $.as_binding_pattern,
      $.remaining_field_pattern,
      '_',
    ),

    _literal: $ => choice(
      $.string_literal,
      $.raw_string_literal,
      $.char_literal,
      $.boolean_literal,
      $.integer_literal,
      $.float_literal,
      $.imaginary_literal,
      $.format_string,
    ),

    integer_literal: _ => token(seq(
      choice(
        /[0-9][0-9_]*/,
        /0x[0-9a-fA-F_]+/,
        /0b[01_]+/,
        /0o[0-7_]+/,
      ),
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.escape_sequence,
        $.string_content,
      )),
      token.immediate('"'),
    ),

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

    _type_identifier: $ => alias($.identifier, $.type_identifier),
    _field_identifier: $ => alias($.identifier, $.field_identifier),
  },
});
